--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=auction-system
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3006/auctiondb
 spring.datasource.username=root
-spring.datasource.password=pratheek
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
