--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=auction-system
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3006/auctiondb
+spring.datasource.url=jdbc:mysql://localhost:3306/auctiondb
 spring.datasource.username=root
-spring.datasource.password=pratheek
+spring.datasource.password=pass@word1
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
